--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,5 +1,8 @@
 .Weather {
     border: 1px solid #dadde1;
+    padding: 16px;
+    border-radius: 4px;
+    color: red;
 }
 .Weather h1 {
     color: #878787;
@@ -7,4 +10,14 @@
     display: block;
     font-size: 24px;
     font-weight: 100;
+}
+Weather ul {
+    margin: 0;
+    padding:0;
+}
+Weather li {
+    font-size: 16px; 
+    font-weight: 100;
+    line-height: 19px;
+    list-style: none;
 }
